Completed MVP with stretch goals of: sign up page, fixed nav bar, and css animation (on the sign up button)

--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,7 @@ p {
   position: fixed;
   left: 0;
   right: 0;
+  opacity: 0.5;
 }
 @media (max-width: 500px) {
   .spacenavstyle {
@@ -242,12 +243,12 @@ footer {
   align-items: center;
 }
 .home .intro .main {
-  margin-top: 90px;
+  margin-top: 95px;
 }
 @media (max-width: 500px) {
   .home .intro .main {
     width: 100%;
-    margin-top: 100px;
+    margin-top: 105px;
   }
 }
 .home .intro h2 {
@@ -346,6 +347,29 @@ footer {
   background: white;
   color: black;
   border: 1px solid black;
+}
+@keyframes bigbtn {
+  from {
+    width: 90px;
+    height: 30px;
+  }
+  to {
+    width: 110px;
+    height: 50px;
+    right: 10;
+  }
+}
+.home .walk .walk-text .btn:hover {
+  position: inherit;
+  animation-name: bigbtn;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn:hover {
+    animation: none;
+  }
 }
 .home .walk .walk-text .spacebtn {
   text-decoration: none;
