--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,10 +3,10 @@
 .home {
   .intro {
   .main {
-    margin-top: 90px;
+    margin-top: 95px;
     @media @phone {
       width: 100%;
-      margin-top: 100px;
+      margin-top: 105px;
     }
   }
 
@@ -95,6 +95,20 @@
         .buttonsize();
         .contentflexing();
         .buttondecor();
+        @keyframes bigbtn {
+          from {width: 90px; height:30px;}
+          to {width: 110px; height: 50px; right: 10;}
+        }
+        &:hover {
+        position: inherit;
+        animation-name: bigbtn;
+        animation-duration: 1s;
+        animation-iteration-count: 1;
+        animation-fill-mode: forwards;
+        @media @phone {
+         animation: none; 
+        }
+      }
       }
       .spacebtn {
         .decor();
