--- a/less/navigation.less
+++ b/less/navigation.less
@@ -9,6 +9,7 @@
     position: fixed;
     left: 0;
     right: 0;
+    opacity: 0.5;
     @media @phone {
         width: 100%;
         .contentflexing(center, center);
